# say-youll-remember-me

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  export-inventory.md  live-system-map.md  private-material-substitutions.md  public-safety.md
examples/memory/company/: COMPANY.md
examples/memory/modules/demo-client/: CONTEXT.md
examples/memory/self/: SOUL.md
examples/memory/sources/: demo-client-request.md
real-system/adapter/: wake_bundle.sh
real-system/controlled-memory-rebuild/: 001_dream_staging_fields.sql  002_raw_source_import.sql  003_source_windows_embeddings.sql  004_compact_memory_windows.sql  NAMESPACE_BLUEPRINT.md  SCHEMA_NOTES.md  VALIDATION.md
real-system/policy/: MEMORY_HYGIENE.md  POLICY_NO_EMBEDDINGS.md
scripts/: demo_orientation.py
sql/: 001_schema.sql
src/source_linked_memory/: __init__.py  chunking.py  index.py  orientation.py  recall.py
tests/: test_demo.py
