[project]
name = "source-linked-agent-memory"
version = "0.1.0"
description = "Public-safe scaffold for source-linked task-agent memory."
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

