[project]
name = "say-youll-remember-me"
version = "0.1.0"
description = "Source-linked fleet memory export from Digital Disconnections."
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
